# passguard

./: CONTRIBUTING.md  LICENSE  README.md
desktop/: .dockerignore  .eslintignore  .gitignore  .prettierignore  .prettierrc  Dockerfile.build  docker-compose.build.yml  package.json  svelte.config.js  vite.config.ts
desktop/src/: app.html
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/components/layout/: App.svelte  BottomBar.svelte  ItemsPanel.svelte  Sidebar.svelte  Titlebar.svelte
desktop/src/components/ui/: SavePrompt.svelte
desktop/src/lib/: config.ts
desktop/src/lib/types/: colors.ts  index.ts
desktop/src/lib/utils/: index.ts
desktop/src/routes/: +layout.svelte  +page.svelte
desktop/src/routes/app/: +layout.svelte  +page.ts
desktop/src/routes/app/favorites/: +page.svelte
desktop/src/routes/app/notes/: +page.svelte
desktop/src/routes/app/notes/[id]/: +page.svelte
desktop/src/routes/app/settings/: +layout.svelte  +page.svelte
desktop/src/routes/app/settings/colors/: +page.svelte
desktop/src/routes/app/trash/: +page.svelte
desktop/src/routes/app/vault/: +layout.svelte  +layout.ts  +page.svelte
desktop/src/routes/login/: +page.svelte
desktop/src/styles/: app.scss  fonts.scss  global.scss  reset.scss  theme.scss
