[package]
name = "passgaurd"
version = "0.0.1"
description = "Simple offline password manager with some extra features"
authors = ["Anil Kumar <akt01.social@gmail.com>"]
license = "MIT"
repository = "https://github.com/ardentkilnfire/passguard"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.8", features = [] }
